--- a/_themes/purity/templates/base.html
+++ b/_themes/purity/templates/base.html
@@ -15,7 +15,7 @@
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@yosida95">
-    <title>{% block title %}{% endblock %} &mdash; {{ SITENAME }}</title>
+    <title>{% block title %}{{ SITENAME }}{% endblock %}</title>
 
     <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css" media="screen">
     <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/responsive.css" media="screen">
