--- a/_themes/purity/templates/tag.html
+++ b/_themes/purity/templates/tag.html
@@ -1,6 +1,8 @@
-{#- vim:set filetype=htmljinja shiftwidth=2: -#}
 {% extends "index.html" %}
 
 {% block url %}{{ tag.url }}{% endblock %}
 
-{% block title %}tag:{{ tag }}{% endblock %}
+{% block title -%}
+tag:{{ tag }} {{ TITLESEPARATOR }} {{ super() }}
+{%- endblock %}
+{#- vim:set filetype=htmljinja: -#}
