theme: comment div.line style out

--- a/_themes/purity/static/css/style.css
+++ b/_themes/purity/static/css/style.css
@@ -145,11 +145,13 @@ img {
   position: relative;
 }
 
+/*
 .line {
   border-top: 1px dotted #ddd;
   margin-top: 28px;
   margin-bottom: 29px;
 }
+*/
 
 .top {
   width: 98.35%;
