yosida95 の 2024 年まとめ

--- a/content/_includes/layouts/base.njk
+++ b/content/_includes/layouts/base.njk
@@ -24,26 +24,7 @@
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="alternate" type="application/rss+xml" href="/rss.xml" />
     <link rel="author" href="http://www.hatena.ne.jp/yosida95/" />
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script>
-      window.twttr = (function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0],
-          t = window.twttr || {};
-        if (d.getElementById(id)) return t;
-        js = d.createElement(s);
-        js.id = id;
-        js.src = "https://platform.twitter.com/widgets.js";
-        fjs.parentNode.insertBefore(js, fjs);
-
-        t._e = [];
-        t.ready = function(f) {
-          t._e.push(f);
-        };
-
-        return t;
-      }(document, "script", "twitter-wjs"));
-    </script>
+    <script async src="https://platform.twitter.com/widgets.js"></script>
     {%- include "partials/google_analytics.njk" %}
   </head>
   <body>
