emit <meta name="generator" />

--- a/content/_includes/layouts/base.njk
+++ b/content/_includes/layouts/base.njk
@@ -18,6 +18,7 @@
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@yosida95" />
+    <meta name="generator" content="{{ eleventy.generator }}" />
     <title>{{ qualifiedTitle }}</title>
     <link rel="stylesheet" type="text/css" href="/_static/css/style.css" media="screen" />
     <link rel="canonical" href="{{ page.url| htmlBaseUrl(site.url) }}" />
