--- a/content/archives/byDay.njk
+++ b/content/archives/byDay.njk
@@ -6,5 +6,5 @@ pagination:
   alias: day
 eleventyExcludeFromCollections: true
 eleventyComputed:
-  title: "{{ day.title }}"
+  title: "{{ day.year }}年{{ day.month }}月{{ day.day }}日の記事"
 ---
