--- a/content/archives/byMonth.njk
+++ b/content/archives/byMonth.njk
@@ -6,5 +6,5 @@ pagination:
   alias: month
 eleventyExcludeFromCollections: true
 eleventyComputed:
-  title: "{{ month.title }}"
+  title: "{{ month.year }}年{{ month.month }}月の記事"
 ---
