--- a/content/archives/byYear.njk
+++ b/content/archives/byYear.njk
@@ -6,5 +6,5 @@ pagination:
   alias: year
 eleventyExcludeFromCollections: true
 eleventyComputed:
-  title: "{{ year.title }}"
+  title: "{{ year.year }}年の記事"
 ---
