--- a/content/archives/index.njk
+++ b/content/archives/index.njk
@@ -1,5 +1,5 @@
 ---
-title: Archives
+title: すべての記事
 layout: layouts/base.njk
 permalink: "archives/{% if pagination.pageNumber > 0 %}page{{ pagination.pageNumber + 1}}.html{% else %}index.html{% endif %}"
 pagination:
