--- a/content/categories/category.njk
+++ b/content/categories/category.njk
@@ -7,6 +7,6 @@ pagination:
   alias: category
 eleventyExcludeFromCollections: true
 eleventyComputed:
-  title: "{{ category.name }}"
+  title: "「{{ category.name }}」カテゴリの記事"
 reverse: true
 ---
