--- a/content/tags/tag.njk
+++ b/content/tags/tag.njk
@@ -7,6 +7,6 @@ pagination:
   alias: tag
 eleventyExcludeFromCollections: true
 eleventyComputed:
-  title: "{{ tag.name }}"
+  title: "「{{ tag.name }}」タグの記事"
 reverse: true
 ---
