--- a/content/tags/index.njk
+++ b/content/tags/index.njk
@@ -6,6 +6,6 @@ eleventyExcludeFromCollections: true
 
 <ul>
 {%- for tag in collections.tags %}
-  <li><a href="{{ tag.url }}">{{ tag.name }}</a> ({{ tag.pages| length }})</li>
+  <li><a href="{{ tag.name| tagUrl }}">{{ tag.name }}</a> ({{ tag.pages| length }})</li>
 {%- endfor %}
 </ul>
