use separate CSS files for articles and photos

--- a/photos/templates/_base.tmpl
+++ b/photos/templates/_base.tmpl
@@ -14,7 +14,7 @@
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@yosida95">
-    <link rel="stylesheet" type="text/css" href="/_static/css/style.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/_static/css/photos.css" media="screen">
     <link rel="canonical" href="{{ .URL }}" />
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="author" href="http://www.hatena.ne.jp/yosida95/" />
