--- a/content/_static/css/style.css
+++ b/content/_static/css/style.css
@@ -1,28 +1,11 @@
-@import "@csstools/normalize.css";
-@import "./purity.css";
-@import "./responsive.css";
+@import "./base.css";
 @import "prismjs/themes/prism-okaidia.css";
-
-* {
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-}
 
 .post-meta {
   margin: 0.5em 0;
 }
 
-#header .logo a,
-#header .logo strong {
-  font-size: 50px;
-  font-weight: 600;
-  line-height: 50px;
-  color: #444;
-}
-
 .content {
-  line-height: 1.8;
-
   h1 {
     margin: calc((1em - 1lh) / 2) 0;
     line-height: 1.6;
@@ -92,62 +75,6 @@
   aside[role="doc-footnote"] {
     margin: 1em 0;
     font-size: 0.95em;
-  }
-}
-
-.post-navigation {
-  display: flex;
-  flex-flow: row wrap;
-  gap: 0 1em;
-  align-items: stretch;
-  padding: 1em 0;
-  margin: 2em 0;
-  border: dotted #ddd;
-  border-width: 1px 0;
-
-  &::before {
-    box-sizing: border-box;
-    display: inline-block;
-    flex: 0 0;
-    width: 1px;
-    content: "";
-    border: dotted #ddd;
-    border-width: 0 1px 0 0;
-  }
-
-  .prev,
-  .next {
-    flex: 1;
-
-    a {
-      display: flex;
-      flex-flow: row nowrap;
-      gap: 0.5em;
-      height: 100%;
-
-      span {
-        flex: 1;
-      }
-    }
-  }
-
-  .prev {
-    order: -1;
-  }
-
-  .prev a::before {
-    display: block;
-    flex: 0 0 auto;
-    align-self: center;
-    content: "\00ab";
-  }
-
-  .next a::after {
-    display: inline-block;
-    flex: 0 0 auto;
-    align-self: center;
-    justify-content: start;
-    content: "\00bb";
   }
 }
 
